--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.2",
-	"appid": "wx037780dcaf11337f",
+	"appid": "",
 	"projectname": "guoqi",
 	"debugOptions": {
 		"hidedInDevtools": []
